--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,7 @@
-<h2>Home Page</h2>
+<div id="homePage">
+	<h4>Welcome to the FCCU</h4>
+	<h2>Employee Activity Club</h2>
+	<h4>Page</h4>
+
+	<%= link_to "Sign Up", signup_path %>
+</div>
