Adds events and admin interface.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
 			<%= link_to ' | ', '#' %>
 			<%= link_to 'News', '#' %>
 			<%= link_to ' | ', '#' %>
-			<%= link_to 'Events', 'events#index' %>
+			<%= link_to 'Events', events_path %>
 		</div>
 	</div>
 </div>
