Sorts events#index by year.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
 			<%= link_to 'Sign Out', signout_path if signedIn? %>
 			<%= link_to 'Sign In', signin_path if !signedIn? %>
 			<%= link_to ' | ', '#' %>
-			<%= link_to 'News', '#' %>
+			<%= link_to 'News', news_path %>
 			<%= link_to ' | ', '#' %>
 			<%= link_to 'Events', events_path %>
 		</div>
