--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div id="homePage">
 	<h4>Welcome to the FCCU</h4>
 	<h2>Employee Activity Club</h2>
-	<h4>Page</h4>
+	<h4>Web Page</h4><br>
 
 	<%= button_to "Sign Up", signup_path, method: :get unless signedIn? %>
 </div>
