Validates that event has not been locked before allowing registration changes.

--- a/app/views/events/_edit_form.html.erb
+++ b/app/views/events/_edit_form.html.erb
@@ -15,7 +15,7 @@
 	<%= f.text_field :picture %><br/>
 
 	<%= f.label :guestCost, "Cost per Paid Guest" %><br>
-	<%= f.text_field :guestCost %><br>
+	<%= f.text_field :guestCost %><br><br>
 
 	<%= f.label :locked, "Locked?" %>
 	<%= f.check_box :locked %><br><br>
