--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -1,12 +1,12 @@
 <h1>Attending <%= @event.name %></h1>
 <%= form_for @appointment, url: event_appointment_path(@event.id, @appointment.id), method: :patch, action: :update do |f| %>
 	<%= f.label :freeGuest, "Bringing a Free Guest?" %>
-	<%= f.check_box :freeGuest %><br>
+	<%= f.check_box :freeGuest %><br><br>
 
 	<%= f.label :paidGuests, "Number of Paid Guests" %>
 	<%= f.select :paidGuests, ((0..10).map {|i| [i,i] }) %><br><br>
 
-	<%= f.submit "Update Registration Details" %>
+	<%= f.submit "Update Registration Details" %><br>
 <% end %>
 
 <%= link_to "I will not be attending this event", event_appointment_path(@event.id, @appointment.id), method: :delete, action: :destroy, data: { confirm: "This will cancel your registration" } %>
