--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,5 +3,5 @@
 	<h2>Employee Activity Club</h2>
 	<h4>Web Page</h4><br>
 
-	<%= button_to "Sign Up", signup_path, method: :get unless signedIn? %>
+	<%= button_to "Sign Up", signup_path, method: :get, class: "btn btn-primary btn-large" unless signedIn? %>
 </div>
