Adds signup link for easier navigation.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -85,6 +85,9 @@
 
 .headerLink {
 	color: white;
+	&:hover {
+		color: white;
+	}
 }
 
 #dropdown li a {
@@ -93,6 +96,7 @@
 
 #content {
 	text-align: center;
+	margin-bottom: 20px;
 }
 
 /* Flash Messages */
