--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Attending <%= @event.name %></h1>
+<% provide(:heading, "Attending #{@event.name}") %>
 <%= form_for @appointment, url: event_appointments_path(@event), method: :post, action: :create do |f| %>
 	<%= f.label :freeGuest, "Bringing a Free Guest?" %>
 	<%= f.check_box :freeGuest %><br><br>
