--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 	<%= render 'layouts/header' %>
 
 	<div id="content">
+		<h1><%= yield(:heading) %></h1>
 		<%= render 'shared/error_messages' %>
 		<%= yield %>
 	</div>
