--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,3 +5,5 @@
 
 	<%= button_to "Sign Up", signup_path, method: :get, class: "btn btn-primary btn-large" unless signedIn? %>
 </div>
+
+<%= render 'layouts/footer' %>
