--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign Up</h1>
+<% provide(:heading, "Sign Up") %>
 <%= form_for @user do |f| %>
 
 	<%= f.label :tellerNumber, "Teller Number" %><br>
