--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>EAC News</h1>
+<% @posts.each do |p| %>
+	<div class="postTitle"><%= p.title %><%= link_to " (Delete)", post_path(p), method: :delete, data: { confirm: "Are you sure?" } if currentlyAdmin? %></div><br>
+	<div class="postName"> By <%= p.user.firstName %> (<%= p.created_at.to_date.strftime("%m-%d-%Y") %>)</div><br>
+	<div class="postBody"><%= p.body %></div><br>
+<% end %>
+
+<%= link_to "Add Post", new_post_path if currentlyAdmin? %>
