--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<h1>New Post</h1>
+<%= form_for(@post) do |f| %>
+	<%= f.label :title %><br>
+	<%= f.text_field :title %><br><br>
+
+	<%= f.label :body %><br>
+	<%= f.text_area :body, rows: 20, id: "postBodyField" %><br><br>
+
+	<%= f.submit "Create Post" %>
+<% end %>
