--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <div id="footer"%>
-	<%= link_to "About", "#" %>
+	<%= link_to "About", about_path %>
 	|
-	<%= link_to "Contact", "#" %>
+	<%= link_to "Contact", contact_path %>
 </div>
