--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,10 +1,10 @@
 <h1>Edit Post</h1>
 <%= form_for(@post) do |f| %>
-	<%= f.label :title %>
-	<%= f.text_field :title %>
+	<%= f.label :title %><br>
+	<%= f.text_field :title %><br><br>
 
-	<%= f.label :body %>
-	<%= f.text_area :body, rows: 20, id: "postBodyField" %>
+	<%= f.label :body %><br>
+	<%= f.text_area :body, rows: 20, id: "postBodyField" %><br><br>
 
 	<%= f.submit "Update Post" %>
 <% end %>
