--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -49,11 +49,13 @@
 #content, #headerZone {
 	width: 60%;
 	max-width: 640px;
+	min-width: 500px;
 	padding: 0;
 }
 
 #headerZone {
 	margin: 0 auto;
+	padding: 0 5px;
 }
 
 #navLinks {
@@ -97,13 +99,26 @@
 	color: black;
 }
 
+/* Page */
+
 #content {
 	text-align: center;
 	margin: 0 auto 50px;
+	background-color: white;
+	padding: 10px;
+}
+
+html, body, #content {
+	height: 100%;
+}
+
+body {
+	background-color: #E9E9E9;
 }
 
 h1 {
 	text-decoration: underline;
+	margin: 0;
 }
 
 .field_with_errors {
