--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,51 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#ProfileInfo {
+	clear: both;
+	width: 100%;
+	margin: 10px 0 0;
+	padding: 0;
+	margin-bottom: 5px;
+}
+
+#ProfileDetails {
+	display: inline-block;
+	width: 50%;
+	float: left;
+	margin: 0;
+	padding: 0;
+	text-align: left;
+	height: 100%;
+}
+
+#ProfileEvents {
+	display: inline-block;
+	width: 50%;
+	float: right;
+	margin: 0;
+	padding: 0;
+	border-left: solid 1px black;
+	text-align: left;
+	height: 100%;
+}
+
+#ProfileEventNotification {
+	clear: both;
+	border-top: 1px solid black;
+	padding-top: 5px;
+}
+
+h4 {
+	margin-bottom: 5px;
+	padding: 0;
+}
+
+ul {
+	list-style: none;
+}
+
+#NextEventMessage {
+	color: green;
+}
