Adds about and contact page information.

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,2 @@
 <% provide(:heading, "About") %>
-<p>This is where the About information will go.</p>
+<p>The Employee Activity Club is an organization that presents monthly outings and giveaways.  The goal of the EAC is to provide an outlet for employees to socialize and enjoy themselves outside of work.</p>
