--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,3 @@
 <% provide(:heading, "Contact") %>
-<p>This is where the contact information will go.</p>
+<p>Questions or concerns about the webiste can be directed to Ryan Timmons.</p>
+<p>The code driving this website can be found on its GitHub page <a href="https://github.com/timmonsryan/EmployeeActivityClub">here</a>.</p>
