Made app into generic sample app instead of company-specific.

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,2 @@
 <% provide(:heading, "About") %>
-<p>The Employee Activity Club is an organization that presents monthly outings and giveaways.  The goal of the EAC is to provide an outlet for employees to socialize and enjoy themselves outside of work.</p>
+<p>This is a sample web application for an activity club that organizes monthly outings and giveaways.  This proof-of-concept allows events to be planned and maintained through a CMS interface.</p>
