--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:heading, "Sign Up") %>
 <%= form_for @user do |f| %>
 
-	<%= f.label :tellerNumber, "Teller Number" %><br>
+	<%= f.label :tellerNumber, "Employee Number" %><br>
 	<%= f.text_field :tellerNumber %><br><br>
 
 	<%= f.label :firstName, "First Name" %><br>
