--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,3 @@
 <% provide(:heading, "Contact") %>
-<p>Questions or concerns about the webiste can be directed to Ryan Timmons.</p>
+<p>Questions about the webiste can be directed to Ryan Timmons.</p>
 <p>The code driving this website can be found on its GitHub page <a href="https://github.com/timmonsryan/EmployeeActivityClub">here</a>.</p>
