Changed one remaining reference to teller number.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 		<h4>Details</h4>
 		<ul>
 			<li><b>Name: </b><%= "#{@user.firstName} #{@user.lastName}" %></li>
-			<li><b>Teller Number:</b> <%= "#{@user.tellerNumber}" %></li>
+			<li><b>Employee Number:</b> <%= "#{@user.tellerNumber}" %></li>
 			<li><b>Department: </b><%= "#{@user.department}" %></li>
 	</div>
 	<div id="ProfileEvents">
